# Perudo

./: .gitignore  custom_class_example.py  pyproject.toml  pyrightconfig.json
src/perudo/: __init__.py  __main__.py  actions.py  common.py  game.py  perudo_game.py  perudogame.py  players.py
src/perudo/cli/: __init__.py  cli_common.py  cli_main.py  client.py  local.py  server.py
src/perudo/network_stuff/: __init__.py  client.py  message.py  messaging.py  network_common.py  server.py
tests/: test_actions.py
