[project]
name = 'perudo'
requires-python = '>= 3.13'
dynamic = ['version']
dependencies = [
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pyright",
]

[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["perudo"]

[tool.setuptools.package-data]
perudo = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "perudo.__version__"}

[tool.mypy]
strict = true
